--- a/Stuffa/Stuffa/App.config
+++ b/Stuffa/Stuffa/App.config
@@ -3,4 +3,4 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
-</configuration>
+</configuration>https://github.com/alevor657/stuffa/blob/master/WpfApp1/WpfApp1/App.config
