Simple song opener

--- a/Stuffa/Stuffa.csproj
+++ b/Stuffa/Stuffa.csproj
@@ -74,6 +74,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Music.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
