--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,8 @@
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="QRCoder" version="1.3.2" targetFramework="net461" />
   <package id="taglib" version="2.1.0.0" targetFramework="net461" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net461" />
+  <package id="ZKWeb.System.Drawing" version="4.0.0" targetFramework="net461" />
 </packages>
