--- a/Stuffa.csproj
+++ b/Stuffa.csproj
@@ -82,8 +82,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Playlist.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="server\Program.cs" />
+    <Compile Include="server\serverMsg.cs" />
+    <Page Include="img\pause-circle-outline.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="img\play-circle-outline.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,14 +104,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="pause-circle-outline.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="play-circle-outline.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Music.cs" />
@@ -134,21 +134,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="play.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="pause.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="left.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="right.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="play-circle-outline.png" />
-    <Resource Include="pause-circle-outline.png" />
-    <Content Include="pause-circle-outline.svg" />
+    <Resource Include="img\pause-circle-outline.png" />
+    <Content Include="img\pause-circle-outline.svg" />
+    <Resource Include="img\pause.png" />
+    <Resource Include="img\play-circle-outline.png" />
+    <Resource Include="img\play.png" />
+    <Resource Include="img\right.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
