--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
   <package id="taglib" version="2.1.0.0" targetFramework="net461" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net461" />
 </packages>
