--- a/Stuffa.csproj
+++ b/Stuffa.csproj
@@ -96,11 +96,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="feedback\DragHere.xaml.cs">
+      <DependentUpon>DragHere.xaml</DependentUpon>
+    </Compile>
     <Compile Include="feedback\MsgWin.xaml.cs">
       <DependentUpon>MsgWin.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="feedback\edit.xaml.cs">
-      <DependentUpon>edit.xaml</DependentUpon>
     </Compile>
     <Compile Include="MediaPlayer.cs" />
     <Compile Include="pages\Container.xaml.cs">
@@ -130,13 +130,13 @@
     <Compile Include="pages\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Page Include="feedback\DragHere.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="feedback\MsgWin.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="feedback\edit.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="pages\Container.xaml">
       <SubType>Designer</SubType>
@@ -245,6 +245,7 @@
     <Resource Include="img\shuffle_bpm_active.png" />
     <Resource Include="img\shuffle_bpm_active2.png" />
     <Resource Include="img\albumart_placeholder.png" />
+    <Resource Include="img\add_circle_black.png" />
     <Content Include="pages\Vicetone - Way Back %28feat. Cozi Zuehlsdorff%29.mp3" />
     <Content Include="pages\Vicetone%2520-%2520Way%2520Back%2520%28feat.%2520Cozi%2520Zuehlsdorff%29%2520%28File4song.com%29.mp3" />
     <Resource Include="pages\WayBackVicetone.jpg" />
