--- a/Stuffa.csproj
+++ b/Stuffa.csproj
@@ -100,6 +100,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="feedback\DragHere - Copy.xaml.cs">
+      <DependentUpon>DragHere - Copy.xaml</DependentUpon>
+    </Compile>
     <Compile Include="feedback\DragHere.xaml.cs">
       <DependentUpon>DragHere.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
     <Compile Include="pages\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Page Include="feedback\DragHere - Copy.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="feedback\DragHere.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
