--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="gong-wpf-dragdrop" version="1.1.0" targetFramework="net461" />
+  <package id="HockeySDK.Core" version="4.1.6" targetFramework="net461" />
+  <package id="HockeySDK.WPF" version="4.1.6" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
